--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <h1>Happy Birthday!</h1>
     <h2>Have a Pleasant day!</h2>
-    <img class="Cat" src="images/Kat.gif" />
+    <img class="Cat" src="images/cat.gif" />
     <img class="Kat" src="images/Kat.gif" />
     <img class="Cake" src="images/Cake.gif" />
 
