--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <body>
     <h1>Happy Birthday!</h1>
     <h2>Have a Pleasant day!</h2>
-    <img class="Cat" src="images/cat.gif" />
-    <img class="Kat" src="images/Kat.gif" />
+    <img class="Cat" src="cat.gif" />
+    <img class="Kat" src="kat.gif" />
     <img class="Cake" src="images/Cake.gif" />
 
     <audio class="BirthdayAudio" controls autoplay loop playsinline>
