--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <body>
     <h1>Happy Birthday!</h1>
     <h2>Have a Pleasant day!</h2>
-    <img class="Cat" src="cat.gif" />
-    <img class="Kat" src="kat.gif" />
-    <img class="Cake" src="images/Cake.gif" />
+    <img class="Cat" src="cat.gif" alt="Cat Dancing" />
+    <img class="Kat" src="kat.gif" alt="Cat Dancing" />
+    <img class="Cake" src="images/Cake.gif" alt="Cake Dancing" />
 
     <audio class="BirthdayAudio" controls autoplay loop playsinline>
       <source src="audio/HappyBirthday.mp3" type="audio/mp3" />
